# cs477lab-1

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  client_bimodal.sh  client_debug.sh  client_unimodal.sh  server_default_dynamic_alloc.sh  server_default_rr.sh  server_default_rrcs.sh  setup_env.sh  teardown_env.sh  visualize_output.ipynb
bench/: Bench.cpp  CMakeLists.txt
bpf/: Makefile  bpfnic.bpf.c  vmlinux.h
common/: packet.h
server_results/: cpu_added_timestamps.txt
src/: BPFNicSkeleton.cpp  Benchmark.hpp  CMakeLists.txt  Client.hpp  ClientBenchmarks.cpp  ClientBenchmarks.hpp  DiscreteValueGenerator.hpp  LatencyHistogramVec.hpp  Main.cpp  ProcParser.cpp  ProgramOptions.hpp  ServerBenchmark.cpp  ServerBenchmark.hpp  Skeleton.cpp  ThreadPool.cpp  UDPSocket.cpp  UDPSocket.hpp
tests/: CMakeLists.txt  Test.cpp
